--- a/samsung.html
+++ b/samsung.html
@@ -149,7 +149,7 @@
                 <div class="col">
                     <a href="#">
                         <div class="card" style="width: 18rem;">
-                            <img src="./samsung/q2.webp" class="card-img-top" alt="...">
+                            <img class="p-3" src="./samsung/q2.webp" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <p class="card-text">Some quick example text to build on the card title and make up the
                                     bulk
