--- a/samsung.html
+++ b/samsung.html
@@ -137,7 +137,7 @@
                 <div class="col">
                     <a href="#">
                         <div class="card" style="width: 18rem;">
-                            <img style="height: 50vh;" src="./samsung/q1.webp" class="card-img-top" alt="...">
+                            <img class="p-3" style="height: 50vh;" src="./samsung/q1.webp" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <p class="card-text">Some quick example text to build on the card title and make up the
                                     bulk
