--- a/apple.html
+++ b/apple.html
@@ -135,7 +135,7 @@
                 <div class="col">
                     <a href="#">
                         <div class="card" style="width: 18rem;">
-                            <img src="./apple/p1.webp" class="card-img-top" alt="...">
+                            <img class="p-3" src="./apple/p1.webp" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <p class="card-text">Some quick example text to build on the card title and make up the
                                     bulk
@@ -147,7 +147,7 @@
                 <div class="col">
                     <a href="#">
                         <div class="card" style="width: 18rem;">
-                            <img src="./apple/p2.webp" class="card-img-top" alt="...">
+                            <img class="p-3" src="./apple/p2.webp" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <p class="card-text">Some quick example text to build on the card title and make up the
                                     bulk
@@ -160,7 +160,7 @@
                 <div class="col">
                     <a href="#">
                         <div class="card" style="width: 18rem;">
-                            <img src="./apple/p3.webp" class="card-img-top" alt="...">
+                            <img class="p-3" src="./apple/p3.webp" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <p class="card-text">Some quick example text to build on the card title and make up the
                                     bulk
